@@ -20,6 +20,8 @@ int Rebmvnorm::Initialize()
 
     var_mul_ = (FLOAT)0.25;
 
+    n_mul_ = (FLOAT)0.9;
+
     Error = GammaInv((FLOAT)1.0 - (FLOAT)2.0 * p_value_, (FLOAT)2.0, length_pdf_ / (FLOAT)2.0, &ChiSqr_);
 
     return (Error);
