@@ -629,3 +629,16 @@
  pages = {332--353},
  doi = {10.1198/jcgs.2010.08111}
 }
+@article{Nagode_2018,
+ author = {Marko Nagode},
+ title = "{Multivariate normal mixture modeling, clustering and classification with the rebmix package}",
+ journal = {ArXiv e-prints},
+ archivePrefix = "arXiv",
+ eprint = {1801.08788},
+ primaryClass = "stat.ML",
+ keywords = {Statistics - Machine Learning, Computer Science - Learning, 62H30, 62F10},
+ year = 2018,
+ month = jan,
+ adsurl = {http://adsabs.harvard.edu/abs/2018arXiv180108788N},
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
